Multiple choice dialog

--- a/Point-of-Sale/app/src/main/res/values/strings.xml
+++ b/Point-of-Sale/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="confirmation_dialog_message">Are you sure you want to remove all items?</string>
     <string name="edit">Edit</string>
     <string name="add_item">Add Item</string>
+    <string name="search">Search</string>
+    <string name="choose_an_item">Choose an item</string>
 </resources>
