--- a/Point-of-Sale/app/src/main/res/values/strings.xml
+++ b/Point-of-Sale/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="add_item">Add Item</string>
     <string name="search">Search</string>
     <string name="choose_an_item">Choose an item</string>
+    <string name="clear_all">Clear All</string>
 </resources>
